added new features . now its can show its own saved images from inside the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="quit">Quit App</string>
     <string name="want_to_exit_application">Want to close App?</string>
     <string name="font">Font</string>
+    <string name="reset_color_pattern">Reset Pattern</string>
 </resources>
