--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="want_to_exit_application">Want to close App?</string>
     <string name="font">Font</string>
     <string name="reset_color_pattern">Reset Pattern</string>
+    <string name="visit_website">Visit Website</string>
 </resources>
